--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body class="min-h-screen flex items-center justify-center p-4">
     <div class="calculator-card bg-white w-full max-w-md overflow-hidden">
         <div class="gradient-header p-5 text-center">
-            <h1 class="text-2xl font-bold text-white">艺术生考试分数计算器（佛山）</h1>
+            <h1 class="text-2xl font-bold text-white">艺术生中考分数计算器（佛山）</h1>
             <p class="text-sm text-white opacity-90 mt-1">帮助艺术生计算考试分数 by 南海艺高</p>
         </div>
 
